# backtester-beta

./: .gitignore  CMakeLists.txt  README.md  constants.hpp  main.cpp
Data-Handling/: DataRetriever.cpp  DataRetriever.hpp  YahooFinanceCSVReader.cpp  YahooFinanceCSVReader.hpp  YahooFinanceDownloader.cpp  YahooFinanceDownloader.hpp
backtester/: CMakeLists.txt  constants.cpp  constants.hpp
backtester/DataHandling/: DataRetriever.cpp  DataRetriever.hpp  YahooFinanceDownloader.cpp  YahooFinanceDownloader.hpp  cookie.txt  crumb.txt
backtester/DataHandling/CSV/: AAPL.csv  SPY.csv
backtester/Infrastructure/: data.cpp  data.hpp  events.cpp  events.hpp  execution.cpp  execution.hpp  portfolio.cpp  portfolio.hpp
backtester/Strategies/: strategy.cpp  strategy.hpp
backtester/include/: DataRetriever.hpp  YFDDataRetriever.hpp  YahooFinanceDownloader.hpp  constants.hpp  data.hpp  events.hpp  execution.hpp  portfolio.hpp  strategy.hpp
backtester/src/: constants.cpp
backtester/src/DataHandling/: DataRetriever.cpp  YFDDataRetriever.cpp  YahooFinanceDownloader.cpp  cookie.txt  crumb.txt
backtester/src/DataHandling/CSV/: SPY.csv
backtester/src/Infrastructure/: data.cpp  events.cpp  execution.cpp  portfolio.cpp
backtester/src/Strategies/: strategy.cpp
backtester_tests/: CMakeLists.txt
backtester_tests/Tests/: CMakeLists.txt  DataHandler_UTESTS.cpp  DataRetriever_UTESTS.cpp  YahooFinanceDownloader_UTESTS.cpp
